--- a/src/main/webapp/static/css/app.css
+++ b/src/main/webapp/static/css/app.css
@@ -21,7 +21,7 @@
     width: 70vw;
     height: 70vh;
     transform: translate(-50%, -50%);
-    background: #eee;
+    background-color: white;
 
 
 }
